--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ lintian (2.5.95) UNRELEASED; urgency=medium
   * checks/fields.{desc.pm}:
     + [CL] Warn about R packages incorrectly set to "Architecture:
       any".  (Closes: #904985)
+  * checks/files.{desc,pm}:
+    + [CL] Add Suggests and Pre-Depends as potential relations with the
+      sensible-utils package.  Thanks to Guillem Jover for the idea.
   * checks/testsuite.{desc,pm}:
     + [CL] Move list of known fields, "Restriction" fields and testsuites
       to files under data/testsuite/.
