--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ lintian (2.5.95) UNRELEASED; urgency=medium
       testsuite-autopkgtest-missing tag; in particular, reference that
       autopkgtest results now influence migration from unstable to testing.
 
+  * data/scripts/interpreters:
+    + [CL] Prevent ruby-script-but-no-ruby-dep false positives by also
+      accepting ruby:any as a dependency.  Thanks to Marc Dequènes for the
+      bug report.  (Closes: #905258)
   * data/standards-version/release-dates:
     + [CL] Add 4.2.0 as a known Standards-Version.
   * data/testsuite/known-restrictions:
