--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,10 @@ lintian (2.5.95) UNRELEASED; urgency=medium
       testsuite definitions.  Thanks to Rebecca N. Palmer.
       (Closes: #904623)
 
+  * lib/Lintian/Collect/Package.pm:
+    + [CL] Don't assume that "tar -tv" output always includes a time.
+      (Closes: #905423)
+
   * debian/rules:
     + [CL] Apply a patch from Felix Lechner which fixes a typo which was
       preventing the 'runtests' target relying on test descriptions.
