--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.96) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 07 Aug 2018 21:41:06 +0800
+
 lintian (2.5.95) unstable; urgency=medium
 
   * Summary of tag changes:
