--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.96) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/cruft.desc:
+    + [CL] Tidy the description of the license-problem-cc-by-nc-sa and
+      license-problem-non-free-img-lenna tags.
+
  -- Chris Lamb <lamby@debian.org>  Tue, 07 Aug 2018 21:41:06 +0800
 
 lintian (2.5.95) unstable; urgency=medium
