--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ lintian (2.5.96) UNRELEASED; urgency=medium
     + [CL] Tidy the description of the license-problem-cc-by-nc-sa and
       license-problem-non-free-img-lenna tags.
 
+  * data/scripts/maintainer-script-bad-command:
+    + [CL] Warn about packages that directly query the dpkg database in
+      their maintainer scripts.  Thanks, Guillem Jover!  (Closes: #905469)
+
  -- Chris Lamb <lamby@debian.org>  Tue, 07 Aug 2018 21:41:06 +0800
 
 lintian (2.5.95) unstable; urgency=medium
