--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.96) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/changelog-file.{desc,pm}:
+    + [CL] Drop no-upstream-changelog; it is rarely actionable and simply
+      introduces unnecessary noise and/or requiring an override. It had
+      additionally been disabled in the Ubuntu profile since 2011.
+      (Closes: #513544, #646192)
   * checks/cruft.desc:
     + [CL] Tidy the description of the license-problem-cc-by-nc-sa and
       license-problem-non-free-img-lenna tags.
