--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ lintian (2.5.96) UNRELEASED; urgency=medium
   * checks/files.{desc,pm}:
     + [BR] Improve package-contains-documentation-outside-usr-share-doc
       by checking if README includes 'this directory' (Closes: #904852)
+    + [CL] Rename package-contains-upstream-install-documentation tag to
+      package-contains-upstream-installation-documentation.
   * checks/source-copyright.{desc,pm}:
     + [CL] Check for Creative Commons license texts that use the incomplete
       "human-readable" summary.  (Closes: #903470)
