--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.97) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 09 Aug 2018 16:06:28 +0200
+
 lintian (2.5.96) unstable; urgency=medium
 
   * Summary of tag changes:
