Allow dh_* commands with B-D: debhelper-compat. (Closes: #907261)
Complete the support for a Build-Depends field that only contains
debhelper-compat and not debhelper.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.98) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/rules.pm:
+    + [CL] Apply patch from Peter Pentchev to fix false-positives for
+      missing Build-Depends on debhelper when using debhelper-compat
+      commands.  (Closes: #907261)
   * checks/scripts.desc:
     + [CL] Expand the description to explain why we emit
       wrong-path-for-interpreter for #!/usr/bin/env perl.
