--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.98) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 18 Aug 2018 10:13:53 +0100
+
 lintian (2.5.97) unstable; urgency=medium
 
   * Summary of tag changes:
