--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-lintian (2.5.98) UNRELEASED; urgency=medium
+lintian (2.5.98) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - debian-rules-passes-version-info-to-dh_shlibdeps
+      - multi-arch-same-package-calls-pycompile
 
 
   * checks/rules.pm:
@@ -22,7 +25,7 @@ lintian (2.5.98) UNRELEASED; urgency=medium
   * data/standards-version/release-dates:
     + [CL] Add 4.2.1 as a known Standards-Version.
 
- -- Chris Lamb <lamby@debian.org>  Sat, 18 Aug 2018 10:13:53 +0100
+ -- Chris Lamb <lamby@debian.org>  Sun, 26 Aug 2018 09:00:19 +0000
 
 lintian (2.5.97) unstable; urgency=medium
 
