--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.99) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 26 Aug 2018 11:28:38 +0200
+
 lintian (2.5.98) unstable; urgency=medium
 
   * Summary of tag changes:
