--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,10 @@ lintian (2.5.100) UNRELEASED; urgency=medium
     + [CL] Apply patch from Paul Gevers to emit warnings for deprecated
       test features.
 
+  * Miscellaneous:
+    + [CL] Apply patch Daniele Forsi fixing a large number of typos in the
+      codebase, documentation, etc.
+
  -- Chris Lamb <lamby@debian.org>  Wed, 29 Aug 2018 16:42:18 +0100
 
 lintian (2.5.99) unstable; urgency=medium
