--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-lintian (2.5.99) UNRELEASED; urgency=medium
+lintian (2.5.99) unstable; urgency=medium
 
-  XXX: generate tag summary
 
   * checks/crufts.desc:
     + [FL] Improve tag description for 'package-does-not-install-examples'.
@@ -16,7 +15,7 @@ lintian (2.5.99) UNRELEASED; urgency=medium
     + [FL] Place all tests for the 'changes' suite into their own
       directories.
 
- -- Chris Lamb <lamby@debian.org>  Sun, 26 Aug 2018 11:28:38 +0200
+ -- Chris Lamb <lamby@debian.org>  Wed, 29 Aug 2018 14:18:31 +0000
 
 lintian (2.5.98) unstable; urgency=medium
 
