--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.100) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 29 Aug 2018 16:42:18 +0100
+
 lintian (2.5.99) unstable; urgency=medium
 
 
