--- a/debian/changelog
+++ b/debian/changelog
@@ -5,10 +5,12 @@ lintian (2.5.100) UNRELEASED; urgency=medium
   * checks/fields.{desc.pm}:
     + [CL] Rename vcs-deprecated-in-debian-infrastructure and update the
       documentation to match.  (Closes: #907578)
-  * checks/testsuite.pm:
+  * checks/testsuite.{desc,pm}:
     + [CL] Don't emit unknown-runtime-tests-feature for autopkgtest
       "Features:" entries that use the "test-name=foo" nomenclature.
       (Closes: #907620)
+    + [CL] Apply patch from Paul Gevers to emit warnings for deprecated
+      test features.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 29 Aug 2018 16:42:18 +0100
 
