--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ lintian (2.5.102) unstable; urgency=medium
     + [CL] Ensure package-contains-documentation-outside-usr-share-doc also
       excludes files in directories called (eg.) "autotools_templates" or
       "my-templates.d".  (Closes: #907734)
+  * checks/source-copyright.pm:
+    + [CL] Include the line number in the output of the
+      incomplete-creative-commons-license tag.
 
   * data/fields/name_section_mappings:
     + [CL] Reclassify xfonts-foo packages as part of the "fonts" section as
