--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.101) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 06 Sep 2018 15:09:21 +0100
+
 lintian (2.5.100) unstable; urgency=medium
 
   * Summary of tag changes:
