--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ lintian (2.5.101) UNRELEASED; urgency=medium
   * checks/changelog-file.{desc,pm}:
     + [CL] Check that .changes and debian/changelog distribution are
       identical.  (Closes: #906610)
+  * checks/fields.desc:
+    + [CL] Clarify that the target of the dbg-package-missing-depends check
+      cannot be "Architecture: all".
   * checks/init.d.pm:
     + [CL] Avoid false positives in init.d-script-possible-missing-stop
       when checking initscripts in "early boot" packages such as udev, etc.
